attempt to fix game starter width overflow

--- a/src/app/game/starter-selector/starter-selector.component.sass
+++ b/src/app/game/starter-selector/starter-selector.component.sass
@@ -5,7 +5,8 @@
     display: flex
     justify-content: center
     align-items: center
-
+    overflow: hidden
+    
 .chooser
     display: grid
     justify-content: center
